--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pacel-bundler</title>
-    
+
     <!-- reset.css -->
     <link
       rel="stylesheet"
@@ -16,5 +16,6 @@
   </head>
   <body>
     <h1>hello parcel</h1>
-    <img src="./images/0010010041353.jpeg" alt="">
+    <img src="./images/0010010041353.jpeg" alt="" />
+  </body>
 </html>
